--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# mac stuff
+
+.DS_Store
+*.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -22,6 +27,9 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+
+# eclipse
+.metadata
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -55,3 +63,4 @@ docs/_build/
 
 # PyBuilder
 target/
+.Rproj.user
