improved gitignore and initial commit for assignment1 of exploratorydataanalysis

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,12 @@
 
 *.DS_Store
 .DS_Store
-
+.DS_Store/
 # R stuff
-.Rapp.history^
+.Rapp.history
+.Rhistory
 
-# quizes
+# quizes and assignments
 quizes/
 coursera/gettingAndCleaningData/quizes/*
 
