everything is working for assignment 1

--- a/coursera/exploratoryDataAnalysis/assignment1/.gitignore
+++ b/coursera/exploratoryDataAnalysis/assignment1/.gitignore
@@ -1,3 +1,5 @@
 householdPoerConsumption.zip
 household_power_consumption.txt
 householdPoerConsumption.txt
+household_power_consumptionSubSet.txt
+*.png
